# MAD

./: .gitignore  BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  README.md  conanfile.py
apps/mad_cli/: Main.cpp
apps/mad_gui/: Main.cpp
architecture/: architecture.md
bindings/: imgui_impl_opengl3.cpp
cmake/: compiler_warnings.cmake
config/: datasets.json  default.json  imgui.ini
include/mad/core/: EKF.hpp  Filter.hpp  FilterFactory.hpp  Logger.hpp  MadModel.hpp  ParticleFilter.hpp  PerformanceMetrics.hpp  Types.hpp  UKF.hpp
include/mad/data/: AsciiDataSource.hpp  DataSource.hpp  Measurement.hpp
include/mad/pipeline/: Pipeline.hpp
include/mad/tracking/: NoopTracker.hpp  Tracker.hpp
include/mad/viz/: Visualizer.hpp
src/core/: Core.cpp  EKF.cpp  FilterFactory.cpp  Logger.cpp  MadModel.cpp  ParticleFilter.cpp  PerformanceMetrics.cpp  UKF.cpp
src/data/: AsciiDataSource.cpp  Data.cpp
src/pipeline/: Pipeline.cpp
src/tracking/: Tracking.cpp
src/viz/: Visualizer.cpp
tests/: CMakeLists.txt
tests/unit/: AsciiDataSourceTests.cpp  EkfUkfTests.cpp  FilterFactoryTests.cpp  FilterSupportTests.cpp  MadModelTests.cpp  ParticleFilterTests.cpp  PipelineTests.cpp
